--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "movemoveapp/laravel-dadata",
+    "name": "sushi-market/laravel-dadata",
     "description": "Laravel SDK for working with the DaData.RU service API",
     "keywords": [
-        "movemoveapp",
+        "sushi-market",
         "dadata",
         "laravel",
         "sdk",
@@ -29,16 +29,16 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "MoveMoveIo\\DaData\\": "src/"
+            "SushiMarket\\DaData\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "MoveMoveIo\\DaData\\Tests\\": "tests/"
+            "SushiMarket\\DaData\\Tests\\": "tests/"
         }
     },
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8",
         "guzzlehttp/guzzle": "^7.0"
     },
     "require-dev": {
@@ -52,16 +52,16 @@
     "extra": {
         "laravel":{
             "providers": [
-                "MoveMoveIo\\DaData\\DaDataServiceProvider"
+                "SushiMarket\\DaData\\DaDataServiceProvider"
             ],
             "aliases": {
-                "DaDataAddress": "MoveMoveIo\\DaData\\Facades\\DaDataAddress",
-                "DaDataName": "MoveMoveIo\\DaData\\Facades\\DaDataName",
-                "DaDataEmail": "MoveMoveIo\\DaData\\Facades\\DaDataEmail",
-                "DaDataPhone": "MoveMoveIo\\DaData\\Facades\\DaDataPhone",
-                "DaDataCompany": "MoveMoveIo\\DaData\\Facades\\DaDataCompany",
-                "DaDataBank": "MoveMoveIo\\DaData\\Facades\\DaDataBank",
-                "DaDataPassport": "MoveMoveIo\\DaData\\Facades\\DaDataPassport"
+                "DaDataAddress": "SushiMarket\\DaData\\Facades\\DaDataAddress",
+                "DaDataName": "SushiMarket\\DaData\\Facades\\DaDataName",
+                "DaDataEmail": "SushiMarket\\DaData\\Facades\\DaDataEmail",
+                "DaDataPhone": "SushiMarket\\DaData\\Facades\\DaDataPhone",
+                "DaDataCompany": "SushiMarket\\DaData\\Facades\\DaDataCompany",
+                "DaDataBank": "SushiMarket\\DaData\\Facades\\DaDataBank",
+                "DaDataPassport": "SushiMarket\\DaData\\Facades\\DaDataPassport"
             }
         }
     }
