--- a/composer.json
+++ b/composer.json
@@ -1,70 +1,69 @@
 {
-    "name": "sushi-market/laravel-dadata",
-    "description": "Laravel SDK for working with the DaData.RU service API",
-    "keywords": [
-        "sushi-market",
-        "dadata",
-        "laravel",
-        "sdk",
-        "address",
-        "email",
-        "passport",
-        "bank",
-        "name",
-        "patronymic",
-        "surname",
-        "pipisco"
-    ],
-    "type": "laravel-package",
-    "license": "MIT",
-    "version": "2.0.1",
-    "authors": [
-        {
-            "name": "Dmitry Kovalev aka Pipisco",
-            "email": "d.kovalev@movemove.io",
-            "homepage": "https://movemove.io",
-            "role": "Developer"
-        }
-    ],
-    "minimum-stability": "dev",
-    "autoload": {
-        "psr-4": {
-            "SushiMarket\\DaData\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "SushiMarket\\DaData\\Tests\\": "tests/"
-        }
-    },
-    "require": {
-        "php": ">=7.4|8.0|8.1",
-        "guzzlehttp/guzzle": "^7.0",
-        "laravel/framework":"^8.0|^9.0|^10.0",
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.4.0",
-        "orchestra/testbench": "^6.2.0"
-    },
-    "scripts": {
-        "test": "phpunit"
-    },
-    "prefer-stable": true,
-    "extra": {
-        "laravel":{
-            "providers": [
-                "SushiMarket\\DaData\\DaDataServiceProvider"
-            ],
-            "aliases": {
-                "DaDataAddress": "SushiMarket\\DaData\\Facades\\DaDataAddress",
-                "DaDataName": "SushiMarket\\DaData\\Facades\\DaDataName",
-                "DaDataEmail": "SushiMarket\\DaData\\Facades\\DaDataEmail",
-                "DaDataPhone": "SushiMarket\\DaData\\Facades\\DaDataPhone",
-                "DaDataCompany": "SushiMarket\\DaData\\Facades\\DaDataCompany",
-                "DaDataBank": "SushiMarket\\DaData\\Facades\\DaDataBank",
-                "DaDataPassport": "SushiMarket\\DaData\\Facades\\DaDataPassport"
-            }
-        }
+  "name": "sushi-market/laravel-dadata",
+  "description": "Laravel SDK for working with the DaData.RU service API",
+  "keywords": [
+    "sushi-market",
+    "dadata",
+    "laravel",
+    "sdk",
+    "address",
+    "email",
+    "passport",
+    "bank",
+    "name",
+    "patronymic",
+    "surname",
+    "pipisco"
+  ],
+  "type": "laravel-package",
+  "license": "MIT",
+  "version": "2.0.1",
+  "authors": [
+    {
+      "name": "Dmitry Kovalev aka Pipisco",
+      "email": "d.kovalev@movemove.io",
+      "homepage": "https://movemove.io",
+      "role": "Developer"
     }
+  ],
+  "minimum-stability": "dev",
+  "autoload": {
+    "psr-4": {
+      "SushiMarket\\DaData\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "SushiMarket\\DaData\\Tests\\": "tests/"
+    }
+  },
+  "require": {
+    "php": ">=7.4|8.0|8.1",
+    "guzzlehttp/guzzle": "^7.0",
+    "laravel/framework": "^8.0|^9.0|^10.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.4.0",
+    "orchestra/testbench": "^6.2.0"
+  },
+  "scripts": {
+    "test": "phpunit"
+  },
+  "prefer-stable": true,
+  "extra": {
+    "laravel": {
+      "providers": [
+        "SushiMarket\\DaData\\DaDataServiceProvider"
+      ],
+      "aliases": {
+        "DaDataAddress": "SushiMarket\\DaData\\Facades\\DaDataAddress",
+        "DaDataName": "SushiMarket\\DaData\\Facades\\DaDataName",
+        "DaDataEmail": "SushiMarket\\DaData\\Facades\\DaDataEmail",
+        "DaDataPhone": "SushiMarket\\DaData\\Facades\\DaDataPhone",
+        "DaDataCompany": "SushiMarket\\DaData\\Facades\\DaDataCompany",
+        "DaDataBank": "SushiMarket\\DaData\\Facades\\DaDataBank",
+        "DaDataPassport": "SushiMarket\\DaData\\Facades\\DaDataPassport"
+      }
+    }
+  }
 }
-
