--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   ],
   "type": "laravel-package",
   "license": "MIT",
-  "version": "2.3",
+  "version": "2.4",
   "authors": [
     {
       "name": "Dmitry Kovalev aka Pipisco",
@@ -38,13 +38,13 @@
     }
   },
   "require": {
-    "php": ">=7.4|8.0|8.1",
+    "php": ">=7.4|8.0|8.1|8.2|8.3",
     "guzzlehttp/guzzle": "^7.0",
-    "laravel/framework": "^8.0|^9.0|^10.0"
+    "laravel/framework": "^8.0|^9.0|^10.0|^11.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.4.0",
-    "orchestra/testbench": "^6.2.0"
+    "phpunit/phpunit": "^10.5",
+    "orchestra/testbench": "^9.0"
   },
   "scripts": {
     "test": "phpunit"
